00-common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: three-body-project
