02-go-api.yaml
# 02-go-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: three-body-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - name: go
        image: alvianfahrul/go-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service
  namespace: three-body-project
spec:
  selector:
    app: go
  ports:
  - port: 8080
    targetPort: 8080
