03-frontend.yaml
# 03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: three-body-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: alvianfahrul/react-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: three-body-project
spec:
  type: NodePort
  selector:
    app: react
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
