04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-body-ingress
  namespace: three-body-project
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # $2 akan mengambil apapun yang ada setelah prefix /go/ atau /laravel/
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # 1. Menuju Go (Port 8080)
      # Browser panggil: /go/api/products -> Backend terima: /api/products
      - path: /go(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-service
            port:
              number: 8080

      # 2. Menuju Laravel (Port 8001)
      # Browser panggil: /laravel/api/products -> Backend terima: /api/products
      - path: /laravel(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: laravel-service
            port:
              number: 8001

      # 3. Menuju Frontend React
      - path: /()(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: react-service
            port:
              number: 3000
